# FreeCircos

./: .clocingore  .gitignore  .ignore  CMakeLists.txt  CMakeSettings.json  FreeCircos.pro  FreeCircos.pro.user.155d6ea  FreeCircos.pro.user.fef1fca  README.md  codecount.sh  customslots.cpp  fileresource.h  freecircos.cpp  freecircos.cpp.orig  freecircos.h  freecircos.ui  functions.cpp  globalsetwin.cpp  globalsetwin.h  icon.rc  init.cpp  main.cpp
.github/workflows/: mirror.yml
addition/: tablemovedialog.cpp  tablemovedialog.h
addition/colorwidgets/: CMakeLists.txt
addition/colorwidgets/src/QtColorWidgets/: harmony_color_wheel.cpp
circos/: backbone.cpp  backbone.h  category.cpp  category.h  circos.cpp  circos.h  gene.cpp  gene.h  link.cpp  link.h  trackarrow.cpp  trackarrow.h
component/: arrowwidget.cpp  bbwidget.cpp  colorwidget.cpp  globalsetwin.cpp  globalsetwin.h  linkwidget.cpp  radiuswidget.cpp
dependencies/glfw3/lib/: glfw3.lib
dependencies/glfw3/lib/pkgconfig/: glfw3.pc
extension/: extarroweditor.cpp  extarroweditor.h  extcheckboxheaderview.cpp  extcheckboxheaderview.h  extcolordialog.cpp  extcolordialog.h  extdoubleslider.cpp  extdoubleslider.h  extdoublesliderprivate.h  extgradient.cpp  extgradient.h  extgradientbutton.cpp  extgradientbutton.h  extitemmodel.cpp  extitemmodel.h  extsorttable.cpp  extsorttable.h  extstandarditemmodel.cpp  extstandarditemmodel.h  extsymslider.cpp  extsymslider.h  exttableview.cpp  exttableview.h  extverticallabel.cpp  extverticallabel.h
file/: category file.xlsx  link file.xlsx  links.xlsx  onlylink.xlsx  参数需求.pptx
fileprocess/: excelbase.cpp  excelbase.h  qvariantlistlistmodel.cpp  qvariantlistlistmodel.h
lib/OpenXLSX/: CMakeLists.txt
lib/OpenXLSX/headers/: XLCell.hpp  XLCellIterator.hpp  XLCellRange.hpp  XLCellReference.hpp  XLCellValue.hpp  XLColor.hpp  XLColumn.hpp  XLCommandQuery.hpp  XLConstants.hpp  XLContentTypes.hpp  XLDateTime.hpp  XLDocument.hpp  XLException.hpp  XLFormula.hpp  XLIterator.hpp  XLProperties.hpp  XLRelationships.hpp  XLRow.hpp  XLRowData.hpp  XLSharedStrings.hpp  XLSheet.hpp  XLWorkbook.hpp  XLXmlData.hpp  XLXmlFile.hpp  XLXmlParser.hpp  XLZipArchive.hpp
lib/OpenXLSX/sources/: XLCell.cpp  XLCellIterator.cpp  XLCellRange.cpp  XLCellReference.cpp  XLCellValue.cpp  XLColor.cpp  XLColumn.cpp  XLContentTypes.cpp  XLDateTime.cpp  XLDocument.cpp  XLFormula.cpp  XLProperties.cpp  XLRelationships.cpp  XLRow.cpp  XLRowData.cpp  XLSharedStrings.cpp  XLSheet.cpp  XLWorkbook.cpp  XLXmlData.cpp  XLXmlFile.cpp  XLZipArchive.cpp
lib/OpenXLSX/sources/utilities/: XLUtilities.hpp
lib/colorwidgets/: .gitlab-ci.yml  CMakeLists.txt  Doxyfile.in  LICENSE-EXCEPTION  QtColorWidgets.pc.in  README.md  color_widgets.pro
lib/colorwidgets/cmake/: QtColorWidgets-Config.cmake  install.cmake  qt-configuration.cmake  versioning.cmake
lib/colorwidgets/cmake/modules/: ProjectVersioning.cmake
lib/colorwidgets/cmake/modules/ProjectVersioning/: version.c.in  version.h.in
lib/colorwidgets/color_widgets_designer_plugin/: CMakeLists.txt  color_2d_slider_plugin.cpp  color_2d_slider_plugin.hpp  color_line_edit_plugin.cpp  color_line_edit_plugin.hpp  color_list_plugin.cpp  color_list_plugin.hpp  color_palette_widget_plugin.cpp  color_palette_widget_plugin.hpp  color_preview_plugin.cpp  color_preview_plugin.hpp  color_selector_plugin.cpp  color_selector_plugin.hpp  color_wheel_plugin.cpp  color_wheel_plugin.hpp  color_widget_plugin_collection.cpp  color_widget_plugin_collection.hpp  gradient_editor_plugin.cpp  gradient_editor_plugin.hpp  gradient_slider_plugin.cpp  gradient_slider_plugin.hpp  hue_slider_plugin.cpp  hue_slider_plugin.hpp  new_plugin  swatch_plugin.cpp  swatch_plugin.hpp
lib/colorwidgets/gallery/: CMakeLists.txt  README.md  screenshot.cpp
lib/colorwidgets/include/QtColorWidgets/: color_delegate.hpp  color_dialog.hpp  color_palette.hpp  color_utils.hpp  color_wheel.hpp  color_wheel_private.hpp  colorwidgets_global.hpp  swatch.hpp
lib/colorwidgets/src/QtColorWidgets/: color_delegate.cpp  color_dialog.cpp  color_dialog.ui  color_line_edit.cpp  color_palette.cpp  color_palette_model.cpp  color_palette_widget.cpp  color_utils.cpp  color_wheel.cpp  gradient_editor.cpp  gradient_list_model.cpp  harmony_color_wheel.cpp  swatch.cpp
paint/: colorgen.cpp  colorgen.h  custombezier.cpp  custombezier.h  customdonut.cpp  customdonut.h  customlink.cpp  customlink.h  customlinkcanvas.cpp  customlinkcanvas.h  custompainter.cpp  custompainter.h  customslice.cpp  customslice.h  customtrack.cpp  customtrack.h  customtrackarrow.cpp  customtrackarrow.h  qcustomplot.cpp  qcustomplot.h  smoothcurvegenerator.cpp  smoothcurvegenerator.h
resource/: conf.qrc  qt.conf  resource.qrc
resource/testfile/: backbone file.xlsx  tile file.xlsx
settings/: winscale.h
testfile/: backbone file without to.xlsx  category file without sys.xlsx  link file without stre.xlsx  track arrow file.xlsx  参数需求.pptx
thread/: pthcircos.cpp  pthpaint.cpp
tool/: customtool.cpp  customtool.h
